2007-11-28  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin.

        <rdar://problem/5132001>
        contextClick is not implemented in DRT on Windows.

        Remove tests that pass now that we have contextClick.
        
        * platform/win/Skipped:

2007-11-28  Alice Liu  <alice.liu@apple.com>

        Removing some tests tracked by <rdar://5130762> because they don't fail.

        * platform/win/Skipped:

2007-11-28  Alice Liu  <alice.liu@apple.com>

        Removing fixed tests tracked by <rdar://5128229>

        * platform/win/Skipped:

2007-11-28  Alice Liu  <alice.liu@apple.com>

        Rubberstamped by Sam.

        Fixing a typo in some filenames

        * http/tests/security/javascriptURL/xss-DENIED-from-javascipt-url-in-foreign-domain-subframe-expected.txt: Removed.
        * http/tests/security/javascriptURL/xss-DENIED-from-javascipt-url-in-foreign-domain-subframe.html: Removed.
        * http/tests/security/javascriptURL/xss-DENIED-from-javascipt-url-in-foreign-domain-window-open-expected.txt: Removed.
        * http/tests/security/javascriptURL/xss-DENIED-from-javascipt-url-in-foreign-domain-window-open.html: Removed.
        * http/tests/security/javascriptURL/xss-DENIED-from-javascript-url-in-foreign-domain-subframe-expected.txt: Copied from http/tests/security/javascriptURL/xss-DENIED-from-javascipt-url-in-foreign-domain-subframe-expected.txt.
        * http/tests/security/javascriptURL/xss-DENIED-from-javascript-url-in-foreign-domain-subframe.html: Copied from http/tests/security/javascriptURL/xss-DENIED-from-javascipt-url-in-foreign-domain-subframe.html.
        * http/tests/security/javascriptURL/xss-DENIED-from-javascript-url-in-foreign-domain-window-open-expected.txt: Copied from http/tests/security/javascriptURL/xss-DENIED-from-javascipt-url-in-foreign-domain-window-open-expected.txt.