@@ -67,16 +67,16 @@ PASS window.screenX is screen.availLeft
 window.moveBy Tests
 
 Testing - moveBy: Zero Zero
-PASS window.screenY is 416
-PASS window.screenX is 630
+PASS window.screenY is 222
+PASS window.screenX is 200
 
 Testing - moveBy: One Zero
-PASS window.screenY is 416
-PASS window.screenX is 631
+PASS window.screenY is 222
+PASS window.screenX is 201
 
 Testing - moveBy: Zero One
-PASS window.screenY is 417
-PASS window.screenX is 631
+PASS window.screenY is 223
+PASS window.screenX is 201
 
 Testing - moveBy: Top Left
 PASS window.screenY is screen.availTop
